WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206015
Text manipulation controller should not observe changes in new replacement elements
https://bugs.webkit.org/show_bug.cgi?id=206015
Summary
Text manipulation controller should not observe changes in new replacement el...
Wenson Hsieh
Reported
2020-01-09 10:25:11 PST
<
rdar://problem/58353667
>
Attachments
Patch
(7.88 KB, patch)
2020-01-09 13:35 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-01-09 13:35:59 PST
Created
attachment 387267
[details]
Patch
WebKit Commit Bot
Comment 2
2020-01-09 16:40:21 PST
Comment on
attachment 387267
[details]
Patch Clearing flags on attachment: 387267 Committed
r254314
: <
https://trac.webkit.org/changeset/254314
>
WebKit Commit Bot
Comment 3
2020-01-09 16:40:23 PST
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 4
2020-01-13 19:06:32 PST
Comment on
attachment 387267
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=387267&action=review
> Source/WebCore/editing/TextManipulationController.cpp:407 > + m_document->eventLoop().queueTask(TaskSource::InternalAsyncTask, [weakThis = makeWeakPtr(*this)] {
Hm... this is probably not sufficient delay. We need to schedule this when the first call to didCreateRendererForElement happens. Anyway, I'm gonna add a generic mechanism to track already translated content so it's sort of a moot point.
Ryosuke Niwa
Comment 5
2020-01-13 19:06:52 PST
(In reply to Ryosuke Niwa from
comment #4
)
> Comment on
attachment 387267
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=387267&action=review
> > > Source/WebCore/editing/TextManipulationController.cpp:407 > > + m_document->eventLoop().queueTask(TaskSource::InternalAsyncTask, [weakThis = makeWeakPtr(*this)] { > > Hm... this is probably not sufficient delay. We need to schedule this when > the first call to didCreateRendererForElement happens. > Anyway, I'm gonna add a generic mechanism to track already translated > content so it's sort of a moot point.
This is because there is no guarantee that the style recalc happens by the next task in the event loop is executed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug